--- a/QR Code/style.css
+++ b/QR Code/style.css
@@ -14,6 +14,7 @@ div#conteiner {
     max-width: 330px;
     height: auto;
     border-radius: 15px;
+    box-shadow: 0px 2px 2px 0px  rgba(0, 0, 0, 0.158);
 }
 
 div#conteiner img {
