--- a/style.css
+++ b/style.css
@@ -1,45 +1,65 @@
 
+@charset "UTF-8";
+
 @import url('https://fonts.googleapis.com/css2?family=Outfit&display=swap');
+
+*{
+    font-family: 'Outfit', sans-serif;
+    margin: 0px;
+    padding: 0px;
+}
 
 
 body {
-    background-color: hsla(219, 15%, 55%, 0.226);
+    background-color: hsl(211, 24%, 81%);
+    width: 100vw;
+    height: 100vh;
+    
 }
 
-div#conteiner {
+main {
+    position: relative;
+    width: 100vw;
+    height: 100vh;
+}
+
+section#container {
+    width: 270px;
+    height: 420px;
+    border-radius: 20px;
     background-color: white;
-    margin: auto;
-    margin-top: 15%;
-    min-width: 100px;
-    max-width: 330px;
-    height: auto;
-    border-radius: 15px;
-    box-shadow: 0px 2px 2px 0px  rgba(0, 0, 0, 0.158);
+
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+
+   
 }
 
-div#conteiner img {
-    max-width: 100%;
-    height: auto;
-    border-radius: 8px;
+section#container > div#imagem {
+    background-image: url(images/image-qr-code.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    height: 250px;
+    margin: 10px;
+    border-radius: 10px;
+}
 
-  }
-
-div#qrcode{
+section#container > div#qr-code {
+    padding: 10px;
     text-align: center;
-    padding: 5%;
 }
 
-
-h1 {
-    height: auto;
-    font-family: 'Outfit', sans-serif;
+div#qr-code > h1 {
+    font-size:1.3em;
     color: hsl(218, 44%, 22%);
-    font-size: 23px;
 }
 
-p {
-    font-family: 'Outfit', sans-serif;
-    color: hsl(213, 4%, 50%);
-    font-size: 15px;
-    padding: 0px 25px;
+div#qr-code > p {
+    font-size: 15px ;
+    padding-top: 8px;
+    color: hsl(220, 12%, 47%);
 }
+
