--- a/style.css
+++ b/style.css
@@ -10,11 +10,11 @@
 }
 
 
-body {
+html, body {
     background-color: hsl(211, 24%, 81%);
     width: 100vw;
     height: 100vh;
-    
+    overflow: hidden;   
 }
 
 main {
@@ -33,8 +33,6 @@ section#container {
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
-
-   
 }
 
 section#container > div#imagem {
